# pqc-work

./: .gitignore  .gitmodules  README.md
sequoia-wasm/: Cargo.toml  package-lock.json
sequoia-wasm/src/: lib.rs
signature-web/: .env.example  .gitignore  App.tsx  README.md  constants.ts  index copy 2.html  index copy.html  index.html  metadata.json  netlify.toml  package-lock.json  package.json  types.ts  vite.config.ts
signature-web/assets/: index-ddr_l69z.js
signature-web/components/: DecryptTab.tsx  EncryptTab.tsx  KeyDetailsModal.tsx  SignTab.tsx  VerifierAccessGate.tsx  VerifyTab.tsx
signature-web/netlify/functions/: NONONOverifier-login.cjs
signature-web/services/: cryptoService.ts
